objects/Vosf_Module__c.object
<CustomObject>
    <fields>
        <fullName>Module_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>Module Ext ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Module</label>
        <referenceTo>Vosf_Module__c</referenceTo>
        <relationshipLabel>Sub Modules</relationshipLabel>
        <relationshipName>Sub_Module</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordType_DeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>RecordType DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Module__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Vosf_Modules</fullName>
        <columns>NAME</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType_DeveloperName__c</field>
            <operation>equals</operation>
            <value>Module</value>
        </filters>
        <label>Modules</label>
    </listViews>
    <listViews>
        <fullName>Vosf_Sub_Modules</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType_DeveloperName__c</field>
            <operation>equals</operation>
            <value>Sub_Module</value>
        </filters>
        <label>Sub-Modules</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <recordTypes>
        <fullName>Module</fullName>
        <active>true</active>
        <label>Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Module</fullName>
        <active>true</active>
        <label>Sub Module</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>